<resources>
    <string name="app_name">Mishranv3</string>
    <string name="logo">MIXRAN</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="dob">Date of Birth</string>
    <string name="forgotten_info">Forgot Username or Password</string>
    <string name="confrim">Confirm</string>
    <string name="party">Party</string>
    <string name="mates">Mates</string>
    <string name="solo">Solo</string>
    <string name="favourite_genre_1">Favourite Genre #1</string>
    <string name="favourite_genre_2">Favourite Genre #2</string>
    <string name="favourite_genre_3">Favourite Genre #3</string>
    <string name="genre_1">Genre #1</string>
    <string name="genre_3">Genre #3</string>
    <string name="genre_2">Genre #2</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="invitation_deep_link" />
    <string name="session_code">Session Code</string>
    <string name="text_view">Text View</string>
    <string name="song">Song</string>
    <string name="duration">Duration</string>
    <string name="artist">Artist</string>
    <string name="rating">Rating</string>
    <string name="textview">TextView</string>
    <string name="join_a_session">Join a Session</string>
    <string name="create_a_session">Create a Session</string>
    <string name="partyid">PartyID</string>
    <string name="session_name">Session Name</string>
    <string name="sessioncode">[SessionCode]</string>
    <string name="submit">submit</string>
    <string name="code">Code</string>
    <string name="playbutton">PlayButton</string>
    <string name="session">Session</string>
    <string name="edit_code">Edit Code</string>
    <string name="hint">hint</string>
    <string name="your_recommendations">Your Recommendations</string>

</resources>
